ProyectoFinal/target/generated-sources/antlr4/ProyectoFinal/ProyectoFinal/ProyectoFinalParser.java
// Generated from ProyectoFinal/ProyectoFinal/ProyectoFinal.g4 by ANTLR 4.5.1
package ProyectoFinal.ProyectoFinal;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProyectoFinalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, PROGRAM=2, MAIN=3, BEGIN=4, INT=5, FLOAT=6, BOOLEAN=7, CHAR=8, 
		STRING=9, PRINT=10, FOR=11, IF=12, ELSE=13, LIMITE=14, ACCION=15, IFCONT=16, 
		WHILE=17, END=18, ASIGNACION=19, PARENTESIS=20, OPERADORES=21, OPERADORESLOGICOS=22, 
		PYC=23, CARACTERES=24, DIGITOS=25, WS=26;
	public static final int
		RULE_start = 0, RULE_proyecto = 1, RULE_librerias = 2, RULE_nombrelib = 3, 
		RULE_programa = 4, RULE_nombreprg = 5, RULE_contenido = 6, RULE_variables = 7, 
		RULE_tipov = 8, RULE_nombrev = 9, RULE_sentencias = 10, RULE_imprimirvalor = 11, 
		RULE_agregarvalor = 12, RULE_ciclos = 13, RULE_condicion = 14, RULE_fin = 15;
	public static final String[] ruleNames = {
		"start", "proyecto", "librerias", "nombrelib", "programa", "nombreprg", 
		"contenido", "variables", "tipov", "nombrev", "sentencias", "imprimirvalor", 
		"agregarvalor", "ciclos", "condicion", "fin"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'IMPORT'", "'PROGRAM'", "'MAIN'", "'BEGIN'", "'INT'", "'FLOAT'", 
		"'BOOLEAN'", "'CHAR'", "'STRING'", "'PRINT'", "'FOR'", "'IF'", "'ELSE'", 
		null, null, null, "'WHILE'", "'END'", "'='", null, null, null, "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IMPORT", "PROGRAM", "MAIN", "BEGIN", "INT", "FLOAT", "BOOLEAN", 
		"CHAR", "STRING", "PRINT", "FOR", "IF", "ELSE", "LIMITE", "ACCION", "IFCONT", 
		"WHILE", "END", "ASIGNACION", "PARENTESIS", "OPERADORES", "OPERADORESLOGICOS", 
		"PYC", "CARACTERES", "DIGITOS", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProyectoFinal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProyectoFinalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ProyectoContext proyecto() {
			return getRuleContext(ProyectoContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			proyecto();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProyectoContext extends ParserRuleContext {
		public ProgramaContext programa() {
			return getRuleContext(ProgramaContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public FinContext fin() {
			return getRuleContext(FinContext.class,0);
		}
		public List<LibreriasContext> librerias() {
			return getRuleContexts(LibreriasContext.class);
		}
		public LibreriasContext librerias(int i) {
			return getRuleContext(LibreriasContext.class,i);
		}
		public ProyectoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proyecto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterProyecto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitProyecto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitProyecto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProyectoContext proyecto() throws RecognitionException {
		ProyectoContext _localctx = new ProyectoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_proyecto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IMPORT) {
					{
					{
					setState(34);
					librerias();
					}
					}
					setState(39);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(42);
			programa();
			setState(43);
			contenido();
			setState(45);
			_la = _input.LA(1);
			if (_la==END) {
				{
				setState(44);
				fin();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LibreriasContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ProyectoFinalParser.IMPORT, 0); }
		public NombrelibContext nombrelib() {
			return getRuleContext(NombrelibContext.class,0);
		}
		public LibreriasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_librerias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterLibrerias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitLibrerias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitLibrerias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LibreriasContext librerias() throws RecognitionException {
		LibreriasContext _localctx = new LibreriasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_librerias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(IMPORT);
			setState(48);
			nombrelib();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NombrelibContext extends ParserRuleContext {
		public TerminalNode CARACTERES() { return getToken(ProyectoFinalParser.CARACTERES, 0); }
		public NombrelibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombrelib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterNombrelib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitNombrelib(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitNombrelib(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NombrelibContext nombrelib() throws RecognitionException {
		NombrelibContext _localctx = new NombrelibContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nombrelib);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(CARACTERES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(ProyectoFinalParser.PROGRAM, 0); }
		public NombreprgContext nombreprg() {
			return getRuleContext(NombreprgContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(PROGRAM);
			setState(53);
			nombreprg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NombreprgContext extends ParserRuleContext {
		public TerminalNode CARACTERES() { return getToken(ProyectoFinalParser.CARACTERES, 0); }
		public NombreprgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombreprg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterNombreprg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitNombreprg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitNombreprg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NombreprgContext nombreprg() throws RecognitionException {
		NombreprgContext _localctx = new NombreprgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nombreprg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(CARACTERES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContenidoContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(ProyectoFinalParser.MAIN, 0); }
		public List<VariablesContext> variables() {
			return getRuleContexts(VariablesContext.class);
		}
		public VariablesContext variables(int i) {
			return getRuleContext(VariablesContext.class,i);
		}
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public List<CiclosContext> ciclos() {
			return getRuleContexts(CiclosContext.class);
		}
		public CiclosContext ciclos(int i) {
			return getRuleContext(CiclosContext.class,i);
		}
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public ContenidoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenido; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterContenido(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitContenido(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitContenido(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContenidoContext contenido() throws RecognitionException {
		ContenidoContext _localctx = new ContenidoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_contenido);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(MAIN);
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << STRING))) != 0)) {
					{
					{
					setState(58);
					variables();
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PRINT || _la==CARACTERES) {
					{
					{
					setState(66);
					sentencias();
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==FOR || _la==WHILE) {
					{
					{
					setState(74);
					ciclos();
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IF || _la==ELSE) {
					{
					{
					setState(82);
					condicion();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public TipovContext tipov() {
			return getRuleContext(TipovContext.class,0);
		}
		public NombrevContext nombrev() {
			return getRuleContext(NombrevContext.class,0);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitVariables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitVariables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variables);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			tipov();
			setState(91);
			nombrev();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipovContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ProyectoFinalParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(ProyectoFinalParser.FLOAT, 0); }
		public TerminalNode CHAR() { return getToken(ProyectoFinalParser.CHAR, 0); }
		public TerminalNode STRING() { return getToken(ProyectoFinalParser.STRING, 0); }
		public TipovContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipov; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterTipov(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitTipov(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitTipov(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipovContext tipov() throws RecognitionException {
		TipovContext _localctx = new TipovContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tipov);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NombrevContext extends ParserRuleContext {
		public TerminalNode CARACTERES() { return getToken(ProyectoFinalParser.CARACTERES, 0); }
		public NombrevContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombrev; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterNombrev(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitNombrev(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitNombrev(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NombrevContext nombrev() throws RecognitionException {
		NombrevContext _localctx = new NombrevContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nombrev);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(CARACTERES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public ImprimirvalorContext imprimirvalor() {
			return getRuleContext(ImprimirvalorContext.class,0);
		}
		public AgregarvalorContext agregarvalor() {
			return getRuleContext(AgregarvalorContext.class,0);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sentencias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			switch (_input.LA(1)) {
			case PRINT:
				{
				setState(97);
				imprimirvalor();
				}
				break;
			case CARACTERES:
				{
				setState(98);
				agregarvalor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimirvalorContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(ProyectoFinalParser.PRINT, 0); }
		public List<TerminalNode> CARACTERES() { return getTokens(ProyectoFinalParser.CARACTERES); }
		public TerminalNode CARACTERES(int i) {
			return getToken(ProyectoFinalParser.CARACTERES, i);
		}
		public List<TerminalNode> DIGITOS() { return getTokens(ProyectoFinalParser.DIGITOS); }
		public TerminalNode DIGITOS(int i) {
			return getToken(ProyectoFinalParser.DIGITOS, i);
		}
		public ImprimirvalorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimirvalor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterImprimirvalor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitImprimirvalor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitImprimirvalor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimirvalorContext imprimirvalor() throws RecognitionException {
		ImprimirvalorContext _localctx = new ImprimirvalorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_imprimirvalor);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(PRINT);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102);
					_la = _input.LA(1);
					if ( !(_la==CARACTERES || _la==DIGITOS) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgregarvalorContext extends ParserRuleContext {
		public List<TerminalNode> CARACTERES() { return getTokens(ProyectoFinalParser.CARACTERES); }
		public TerminalNode CARACTERES(int i) {
			return getToken(ProyectoFinalParser.CARACTERES, i);
		}
		public TerminalNode ASIGNACION() { return getToken(ProyectoFinalParser.ASIGNACION, 0); }
		public TerminalNode OPERADORES() { return getToken(ProyectoFinalParser.OPERADORES, 0); }
		public TerminalNode DIGITOS() { return getToken(ProyectoFinalParser.DIGITOS, 0); }
		public AgregarvalorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agregarvalor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).enterAgregarvalor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProyectoFinalListener ) ((ProyectoFinalListener)listener).exitAgregarvalor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProyectoFinalVisitor ) return ((ProyectoFinalVisitor<? extends T>)visitor).visitAgregarvalor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgregarvalorContext agregarvalor() throws RecognitionException {
		AgregarvalorContext _localctx = new AgregarvalorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_agregarvalor);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(CARACTERES);
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(109);
				match(ASIGNACION);
				}
				break;
			case 2:
				{
				setState(110);
				match(ASIGNACION);
				setState(111);
				match(CARACTERES);
				setState(112);
				match(OPERADORES);
				}
				break;
			}
			setState(122);
			switch (_input.LA(1)) {
			case EOF:
			case PRINT:
			case FOR:
			case IF:
			case ELSE:
			case ACCION:
			case WHILE:
			case END:
			case PYC:
			case CARACTERES:
				{
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(115);
						match(CARACTERES);
						}
						} 
					}
					setState(120);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				}
				break;
			case DIGITOS:
				{
				setState(121);
				match(DIGITOS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
